test/libsolidity/syntaxTests/nameAndTypeResolution/541_warn_about_address_members_on_contract_balance.sol
contract C {
    function f() view public {
        this.balance;
    }
}
// ----
// TypeError: (52-64): Member "balance" not found or not visible after argument-dependent lookup in contract C
